html-css flexbox

--- a/grid.html
+++ b/grid.html
@@ -3,14 +3,16 @@
     <head>
         <title>Grid Practice</title>
     </head>
-    <body>
+    <body style="padding-bottom: 1000px;">
         <div style="
+            width: 200px;
             display: grid;
-            grid-template-columns: 100px 100px;
+            grid-template-columns: 100px 100px 100px;
             /* display: inline-block; */
             ">
             <div style="background-color: lightblue;"> div 1</div>
             <div style="background-color: lightpink;">div 2<p>test</p></div>
+            <div> Div 3</div>
         </div>
         <div style="
             margin-top: 30px;
@@ -43,6 +45,21 @@
             <div style="background-color: lightblue;"> div 1</div>
             <div style="background-color: lightyellow;"> div 2</div>
             <div style="background-color: lightgreen;"> div 3</div>
+        </div>
+
+        <div style="
+    
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 20px;
+            row-gap: 40px;
+            ">
+            <div style="background-color: lightblue; height: 200px;">1</div>
+            <div style="background-color: lightpink; height: 200px"><p>test</p></div>
+            <div style="background-color: lightblue; height: 200px;"> 1</div>
+            <div style="background-color: lightpink; height: 200px"><p>test</p></div>
+            <div style="background-color: lightblue; height: 200px;"> 1</div>
+            <div style="background-color: lightblue; height: 200px;">1</div>
         </div>
     </body>
 </html>
